
// http://googlewebmastercentral.blogspot.sk/2011/09/pagination-with-relnext-and-relprev.html
- added: @{next('/page/3/')}
- added: @{prev('/page/1/')}

// http://googlewebmastercentral.blogspot.sk/2009/02/specify-your-canonical.html
- added: @{canonical('/original/12345-product/')}

- added: new example: https://github.com/petersirka/partial.js/tree/master/examples/views-head

// http://www.partialjs.com/documentation/views/
- updated: views: @{text}, @{hidden}, @{checkbox}, @{radio}, @{textarea}

- updated: auto CSS vendor prefixes
- updated: websocket - client.close() - removed @status

- clean code

======= 1.2.3-9

- added: CSS auto vendor prefixes
- added: new route flag '+xhr' (usefull for both request - XHR and non XHR)

- updated: empty-project (added to default.css @#auto-vendor-prefix#@)
- updated: binary (executable)

- fixed: minify "Content"

======= 1.2.3-8

- added: partial content routing - framework.partial(name, [fnExecute])
- added: partial content to controller routing - framework.route(url, flags, maximumSize, [partial], [timeout])
- added: controller timeout - framework.route(url, flags, maximumSize, [partial], [timeout])
- added: controller.isCanceled;
- added: new system route #408 (Request Timeout)
- added: framework.config['default-request-timeout']

- updated: framework.usage()

- fixed: problem with path
- fixed: utils.request()
- fixed: problem Content-Range - Streaming

- clean code

NEW EXAMPLES:

- https://github.com/petersirka/partial.js/tree/master/examples/routing-partial (partial routing)
- https://github.com/petersirka/partial.js/tree/master/examples/routing-timeout (new system route #408)

======= 1.2.3-7

- added: template pluralize (https://github.com/petersirka/partial.js/tree/master/examples/templating)
- added: basic sending and recieving messages through websocket (Standard - RFC 6455 Support) - https://github.com/petersirka/partial.js/tree/master/examples/websocket
- added: websocket routing