@@ -2,5 +2,8 @@
 @{meta('title', 'description <encoded>', 'keywords')}
 
 <div>
+	<div>Read - @{title} (readonly, html encoded)</div>
+	<div>Read - @{description} (readonly, html encoded)</div>
+	<div>Read - @{keywords} (readonly, html encoded)</div>
 	<strong>Welcome!</strong>
 </div>
