@@ -15,6 +15,8 @@
 
 - added: new example: https://github.com/petersirka/partial.js/tree/master/examples/views-head
 
+- added: @{title}, @{description}, @{keywords}
+
 // http://www.partialjs.com/documentation/views/
 - updated: views: @{text}, @{hidden}, @{checkbox}, @{radio}, @{textarea}
 
